# family_tasks

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
scripts/: gen_vapid.py
src/family_tasks/: auth.py  config.py  db.py  humanize.py  main.py  models.py  push.py  push_routes.py  tasks.py
src/family_tasks/static/: app.css  manifest.webmanifest  push.js  sw.js
src/family_tasks/templates/: active.html  base.html  done.html  login.html
src/family_tasks/templates/partials/: task_list.html  task_row.html
tests/: conftest.py  test_auth.py  test_lifecycle.py  test_notify.py
